# lfsbug

./: README.md  pyproject.toml
lfsbug/assets/: foo.tar.zst
