[project]
authors = [{name = "bar", email = "foo@users.noreply.github.com"}]
dependencies = []
description = "Add a short description here"
name = "lfsbug"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
lfsbug = { path = ".", editable = true }

[tool.pixi.tasks]
